--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
+# Backend port
+API_PORT=
+FRONTEND_PORT=
 
 # Mysql
-MYSQL_DATABASE=
-MYSQL_PASSWORD=
-MYSQL_ROOT_PASSWORD=
+MYSQL_DATABASE=petrozetka_db
+MYSQL_PASSWORD=petrozetka
+MYSQL_ROOT_PASSWORD=petrozetka
