--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ API_PORT=
 FRONTEND_PORT=
 
 # Mysql
-MYSQL_DATABASE=petrozetka_db
-MYSQL_PASSWORD=petrozetka
-MYSQL_ROOT_PASSWORD=petrozetka
+MYSQL_DATABASE=
+MYSQL_PASSWORD=
+MYSQL_ROOT_PASSWORD=
